video-details page , video search page on desktop filter and card gap fix

--- a/src/client/scss/vmware/components/card.scss
+++ b/src/client/scss/vmware/components/card.scss
@@ -118,7 +118,7 @@
         >div:first-child {
             width: 20%;
             float: left;
-            margin-top: 20px;
+            // margin-top: 20px;
         }
 
         >.lnk {
@@ -138,7 +138,7 @@
 
         >.card-text {
             width: 79%;
-            margin-top: 0;
+            margin-top: 0 !important;
             margin-left: auto;
         }
     }
@@ -188,6 +188,9 @@
             padding: 0;
             padding-left: 12px;
             padding-right: 12px;
+            justify-content: center;
+            margin-top: 10px;
+            flex: none !important;
         }
 
         }
