--- a/src/client/scss/vmware/pages/explore-search-videos.scss
+++ b/src/client/scss/vmware/pages/explore-search-videos.scss
@@ -30,6 +30,7 @@
 
    .selected-container {
      display: flex;
+     flex-wrap: wrap;
      // justify-content: space-between;
    }
 
@@ -162,7 +163,7 @@
          text-align: left;
          display: inline-block;
          padding-left: 10px;
-         padding-right: 10px;
+         padding-right: 30px;
 
          // HACK: JD - we had to create a div for the carot vs adding as content. there are content: unset !importants overriding fontawesome.
          .dropdown-caret {
