--- a/src/client/scss/vmware/pages/video-page.scss
+++ b/src/client/scss/vmware/pages/video-page.scss
@@ -199,6 +199,10 @@
           display: flex;
         }
       }
+      @media (max-width: 767px) {
+        max-width: 100%;
+        height: auto;
+      }
     }
 
     .video-duration {
@@ -269,10 +273,15 @@
   }
 
   /* Media query for tablets */
+  @media (max-width:991px) {
+    .video_container{
+      gap: 40px;
+    }
+  }
   @media (max-width: 768px) {
     .videos-container {
       flex-wrap: wrap;
-      gap: 10px;
+      gap: 40px;
       justify-content: center;
       flex-direction: column;
       align-items: center;
@@ -290,7 +299,7 @@
     }
 
     .video-item a {
-      height: 150px;
+      // height: 150px;
     }
 
     .video-info h3 {
@@ -354,9 +363,38 @@
     .video-content {
       max-width: 680px;
       width: 100%;
+      @media (max-width:991px) {
+        max-width: 100%;
+
+      }
 
       .tab-content {
         padding-left: 20px;
+      }
+    }
+
+    @media (max-width:991px) {
+      .col-relvideo{
+        max-width: 100%;
+        .related-videos-section{
+          max-width: 100%;
+    justify-content: flex-start;
+    .videos-container-0{
+          max-width: 100%;
+    width: 100%;
+    .videos-container{
+      max-width: 100%;
+      .video-item{
+            width: 100%;
+    max-width: 100%;
+    >a{
+          max-width: 100%;
+          height: auto;
+    }
+      }
+    }
+    }
+        }
       }
     }
   }
@@ -380,7 +418,9 @@
   .video-box {
     .row-content {
       margin-top: 30px !important;
-
+        @media (max-width: 991px) {
+            flex-direction: column;
+          }
       .vid-tags {
         padding-bottom: 10px;
 
@@ -394,6 +434,10 @@
       .video-title {
         font-size: 35px;
         padding-bottom: 20px;
+         @media (max-width:991px) {
+                 font-size: 28px;
+
+        }
       }
 
       .nav-tabs {
@@ -528,8 +572,14 @@
           width: 100%;
           cursor: pointer;
           justify-content: flex-end;
-
           position: relative;
+          @media (max-width: 1200px) {
+            min-width: 450px;
+          }
+          @media (max-width: 991px) {
+            flex-direction: column;
+            min-width: auto;
+          }
         }
 
         .video-info {
@@ -576,6 +626,9 @@
 
   .bc-player-lUBT2rAMW_default-index-0.vjs-fluid:not(.vjs-audio-only-mode) {
     padding-top: 38.239316%;
+    @media (max-width: 768px) {
+      padding-top: 58.239316%;
+    }
   }
 
   .session-details {
